# django-shield

./: .coverage  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml
api/reference/: index.html
changelog/: index.html
django_shield/: __init__.py  conf.py  debug.py  exceptions.py  guard.py  rules.py
django_shield/expressions/: __init__.py  ast.py  cache.py  evaluator.py  lexer.py  parser.py
docs/: changelog.md  index.md
docs/api/: reference.md
docs/examples/: blog.md  ecommerce.md  saas.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cbv.md  debug.md  expressions.md  guard.md  rules.md
examples/blog/: index.html
examples/ecommerce/: index.html
examples/saas/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/cbv/: index.html
guide/debug/: index.html
guide/expressions/: index.html
guide/guard/: index.html
guide/rules/: index.html
search/: search_index.json
site/: 404.html  index.html
site/changelog/: index.html
site/examples/ecommerce/: index.html
site/getting-started/installation/: index.html
site/guide/rules/: index.html
tests/: conftest.py  models.py  settings.py  test_backward_compat.py  test_debug.py  test_exceptions.py  test_guard.py  test_guard_all.py  test_guard_any.py  test_guard_cbv.py  test_rules.py
tests/test_expressions/: test_errors.py  test_evaluator.py  test_lexer.py  test_parser.py
