[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-shield"
version = "0.2.0"
description = "A declarative permission system for Django"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Django Shield Contributors" }
]
keywords = ["django", "permissions", "authorization", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "django>=4.2",
    "sly>=0.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/django-shield/django-shield"
Documentation = "https://github.com/django-shield/django-shield#readme"
Repository = "https://github.com/django-shield/django-shield"
Issues = "https://github.com/django-shield/django-shield/issues"

[tool.hatch.build.targets.wheel]
packages = ["django_shield"]

[tool.pytest.ini_options]
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["django_shield"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"django_shield/expressions/lexer.py" = ["F821", "F811"]
"django_shield/expressions/parser.py" = ["F821", "F811"]


[tool.ruff.lint.isort]
known-first-party = ["django_shield"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110"]
